--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 serde_repr = "0.1.10"
 thiserror = "1.0.38"
+
+[dev-dependencies]
+zip = "0.6.4"
